# opencode-telegram

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  configuration.md  deployment.md  migration-notes.md  security.md
src/opencode_telegram/: __init__.py  __main__.py
src/opencode_telegram/app/: di.py
src/opencode_telegram/app/services/: session_sync.py
src/opencode_telegram/app/usecases/: __init__.py  handle_command.py  handle_message.py
src/opencode_telegram/domain/: entities.py  ports.py  value_objects.py
src/opencode_telegram/infrastructure/: config.py  logging.py  security.py
src/opencode_telegram/infrastructure/opencode/: __init__.py  api_adapter.py  base.py  cli_adapter.py  fake_adapter.py
src/opencode_telegram/infrastructure/persistence/: database.py  sqlite_repository.py
src/opencode_telegram/infrastructure/telegram/: client.py  formatting.py  poller.py
src/opencode_telegram/interfaces/: http.py
src/opencode_telegram/interfaces/telegram/: handlers.py
src/opencode_telegram/shared/: errors.py
tests/: conftest.py
tests/test_domain/: test_entities.py  test_value_objects.py
tests/test_infrastructure/: test_config.py  test_formatting.py  test_security.py
tests/test_telegram/: test_callback_handler.py
tests/test_usecases/: test_handle_command.py  test_handle_message.py
