[project]
name = "opencode-telegram"
version = "0.2.0"
description = "OpenCode <-> Telegram Bridge — Persistent session bridge for OpenCode via Telegram"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
opencode-telegram = "opencode_telegram.__main__:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
